# ajib

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  SETUP.md  __init__.py  pyproject.toml  requirements.txt
ajib/: __init__.py
ajib/bot/core/: __init__.py  bot.py  i18n.py
ajib/bot/handlers/: __init__.py  customer.py
ajib/bot/locales/: __init__.py  fa.yml
ajib/bot/services/: __init__.py
ajib/cli/: __init__.py  ajib
ajib/deploy/: uninstall.sh  update.sh
bot/: __init__.py
bot/core/: bot.py  config.py  database.py
bot/handlers/: admin.py
bot/keyboards/: __init__.py
bot/locales/: en.yml
bot/services/: blitz_client.py  heleket_client.py
deploy/: __init__.py  ajib-bot.service  install.sh
scripts/: __init__.py
